added handlers and services (without logic and repos) for all routes
