# backend/docs/swagger.json
@@ -17,6 +17,17 @@
                     "docs"
                 ],
                 "summary": "create decrypted doc with signature",
+                "parameters": [
+                    {
+                        "description": "document message creation",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/services.CreateDocumentMessageRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -40,7 +51,7 @@
             }
         },
         "/docs/available": {
-            "post": {
+            "get": {
                 "description": "get available docs for user",
                 "consumes": [
                     "application/json"
@@ -56,7 +67,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.AvailableDocumentsResponse"
                         }
                     },
                     "400": {
@@ -100,7 +111,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.DocumentResponse"
                         }
                     },
                     "400": {
@@ -135,7 +146,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.KeysResponse"
                         }
                     },
                     "400": {
@@ -166,9 +177,20 @@
                     "keys"
                 ],
                 "summary": "post your public key in the system",
+                "parameters": [
+                    {
+                        "description": "public key from user",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/services.PublicKeyCreationRequest"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "type": "string"
                         }
@@ -190,7 +212,7 @@
         },
         "/keys/public/{user_id}": {
             "get": {
-                "description": "get user public key bu user_id",
+                "description": "get user public key by user_id",
                 "consumes": [
                     "application/json"
                 ],
@@ -214,7 +236,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.PublicKeyResponse"
                         }
                     },
                     "400": {
@@ -407,6 +429,73 @@
         }
     },
     "definitions": {
+        "handlers.AvailableDocumentsResponse": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handlers.DocumentItemResponse"
+                    }
+                }
+            }
+        },
+        "handlers.DocumentItemResponse": {
+            "type": "object",
+            "properties": {
+                "Theme": {
+                    "type": "string"
+                },
+                "recipient_id": {
+                    "type": "string"
+                },
+                "sender_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.DocumentResponse": {
+            "type": "object",
+            "properties": {
+                "Theme": {
+                    "type": "string"
+                },
+                "decrypted_text": {
+                    "type": "string"
+                },
+                "hash": {
+                    "type": "string"
+                },
+                "recipient_id": {
+                    "type": "string"
+                },
+                "sender_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.KeysResponse": {
+            "type": "object",
+            "properties": {
+                "private_key": {
+                    "type": "string"
+                },
+                "public_key": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.PublicKeyResponse": {
+            "type": "object",
+            "properties": {
+                "public_key": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.UserResponse": {
             "type": "object",
             "properties": {
@@ -457,6 +546,17 @@
                     "items": {
                         "$ref": "#/definitions/handlers.UserResponse"
                     }
+                }
+            }
+        },
+        "services.CreateDocumentMessageRequest": {
+            "type": "object"
+        },
+        "services.PublicKeyCreationRequest": {
+            "type": "object",
+            "properties": {
+                "public_key": {
+                    "type": "string"
                 }
             }
         },
